--- a/index.html
+++ b/index.html
@@ -1,194 +1,8 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مملكة علوش - النسخة الشاملة 👑</title>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <style>
-        :root { --gold: #ffd700; --bg: #000; --panel: #0f0f0f; }
-        body { background: var(--bg); color: #fff; font-family: 'Tahoma', sans-serif; margin: 0; overflow: hidden; }
-
-        /* الأجنحة */
-        .side { width: 260px; height: 100vh; background: var(--panel); position: fixed; transition: 0.5s; z-index: 2000; top: 0; border: 1px solid #222; }
-        #side-right { right: -262px; }
-        #side-left { left: -262px; }
-        .side.open { right: 0 !important; left: 0 !important; }
-
-        /* نافذة التعديل - المطور */
-        #edit-popup { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 280px; background: #161616; border: 2px solid var(--gold); border-radius: 15px; padding: 20px; display: none; z-index: 4000; text-align: center; }
-        #edit-popup input[type="text"] { width: 90%; background: #000; border: 1px solid #444; color: #fff; padding: 10px; margin: 10px 0; border-radius: 5px; }
-        .file-label { display: block; background: #222; padding: 10px; border: 1px dashed var(--gold); margin-bottom: 10px; cursor: pointer; border-radius: 8px; }
-
-        /* الشات والرسائل */
-        #main-view { height: 100vh; display: flex; flex-direction: column; position: relative; }
-        #chat-win { flex: 1; overflow-y: auto; padding: 15px; background: #000; }
-        .msg { display: flex; gap: 10px; margin-bottom: 15px; }
-        .msg.me { flex-direction: row-reverse; }
-        .u-img { width: 45px; height: 45px; border-radius: 10px; border: 2px solid var(--gold); object-fit: cover; }
-        .bubble { max-width: 70%; background: #1a1a1a; padding: 10px; border-radius: 12px; border: 1px solid #333; }
-        .me .bubble { border-color: var(--gold); background: #221d00; }
-        .u-name { font-size: 11px; color: var(--gold); font-weight: bold; margin-bottom: 4px; display: block; }
-
-        /* المتصلون */
-        .user-item { display: flex; align-items: center; gap: 10px; padding: 10px; border-bottom: 1px solid #222; }
-
-        /* شريط الأدوات */
-        .bar { background: #080808; padding: 12px; display: flex; gap: 10px; border-top: 1px solid #222; }
-        #em-box { height: 180px; background: #0a0a0a; border-top: 2px solid var(--gold); display: none; grid-template-columns: repeat(7, 1fr); padding: 10px; overflow-y: auto; }
-        #yt-box { position: absolute; top: 80px; left: 15px; width: 170px; height: 110px; border: 2px solid var(--gold); display: none; z-index: 1000; border-radius: 10px; overflow: hidden; background: #000; }
-    </style>
-</head>
-<body onclick="closeAll()">
-
-    <div id="edit-popup" onclick="event.stopPropagation()">
-        <h3 style="color:var(--gold);">تعديل الملف الملكي</h3>
-        <input type="text" id="new-n" placeholder="تغيير اسمك">
-        
-        <label class="file-label">
-            <span>📷 اختر صورة من جهازك</span>
-            <input type="file" id="file-inp" accept="image/*" style="display:none;" onchange="handleFile(this)">
-        </label>
-        <div id="status-upload" style="font-size:10px; color:var(--gold); margin-bottom:10px;"></div>
-
-        <button onclick="saveProfile()" style="width:100%; background:var(--gold); border:none; padding:10px; border-radius:5px; font-weight:bold; cursor:pointer;">تأكيد وحفظ</button>
-        <button onclick="document.getElementById('edit-popup').style.display='none'" style="width:100%; background:none; color:red; border:none; margin-top:10px; cursor:pointer;">إلغاء</button>
-    </div>
-
-    <div id="side-right" class="side" onclick="event.stopPropagation()">
-        <div style="padding:15px; background:var(--gold); color:#000; font-weight:bold; text-align:center;">👥 المتصلون</div>
-        <div id="user-list"></div>
-    </div>
-
-    <div id="side-left" class="side" onclick="event.stopPropagation()">
-        <div style="padding:15px; border-bottom:1px solid #333; text-align:center; color:var(--gold);">⚙️ الإعدادات</div>
-        <div style="padding:10px;">
-            <button onclick="document.getElementById('edit-popup').style.display='block'" style="width:100%; padding:15px; background:none; color:#fff; border:none; text-align:right; font-size:16px; cursor:pointer;">👤 تعديل البروفايل</button>
-            <button onclick="askYT()" style="width:100%; padding:15px; background:none; color:#fff; border:none; text-align:right; font-size:16px; cursor:pointer;">📺 تشغيل يوتيوب</button>
-            <button onclick="db.ref('main_msgs').remove()" style="width:100%; padding:15px; background:none; color:red; border:none; text-align:right; font-size:16px; cursor:pointer;">🧨 تصفير الشات</button>
-        </div>
-    </div>
-
-    <div id="main-view">
-        <div style="padding:12px; background:#111; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #222;">
-            <button onclick="openS('left', event)" style="background:none; border:none; font-size:25px; cursor:pointer;">👑</button>
-            <b style="color:var(--gold); font-size:18px;">مملكة علوش</b>
-            <button onclick="openS('right', event)" style="background:none; border:none; font-size:25px; cursor:pointer;">👥</button>
-        </div>
-
-        <div id="yt-box" onclick="event.stopPropagation()">
-            <div id="yt-frame" style="width:100%; height:100%;"></div>
-        </div>
-
-        <div id="chat-win"></div>
-        <div id="em-box" onclick="event.stopPropagation()"></div>
-
-        <div class="bar" onclick="event.stopPropagation()">
-            <button style="background:none; border:none; font-size:25px; cursor:pointer;" onclick="toggleEm(event)">😊</button>
-            <input type="text" id="mInp" placeholder="تكلم يا ملك...">
-            <button style="background:none; border:none; font-size:25px; cursor:pointer;" onclick="send()">🚀</button>
-        </div>
-    </div>
-
-<script>
-    const firebaseConfig = {
-        apiKey: "AIzaSyDpjqkb4U-RF71r_Zv3tHAV9wWWe2L3pEQ",
-        authDomain: "masterchat-f2da9.firebaseapp.com",
-        databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
-        projectId: "masterchat-f2da9"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    const auth = firebase.auth();
-    let myID, myD = {}, tempImg = "";
-
-    auth.onAuthStateChanged(u => {
-        if(u) {
-            myID = u.uid;
-            db.ref('users/'+myID).on('value', s => {
-                myD = s.val() || { n: "عضو جديد", av: "https://via.placeholder.com/100" };
-                db.ref('status/'+myID).set({ n: myD.n, av: myD.av });
-                db.ref('status/'+myID).onDisconnect().remove();
-            });
-            init();
-        }
-    });
-
-    function openS(d, e) { e.stopPropagation(); document.getElementById('side-'+d).classList.add('open'); }
-    function closeAll() {
-        document.getElementById('side-right').classList.remove('open');
-        document.getElementById('side-left').classList.remove('open');
-        document.getElementById('em-box').style.display = 'none';
-    }
-
-    // معالجة ملف الصورة من الجهاز
-    function handleFile(input) {
-        const file = input.files[0];
-        if (file) {
-            const reader = new FileReader();
-            document.getElementById('status-upload').innerText = "جاري معالجة الصورة...";
-            reader.onload = function(e) {
-                tempImg = e.target.result; // الصورة بصيغة Base64
-                document.getElementById('status-upload').innerText = "✅ تم اختيار الصورة بنجاح";
-            };
-            reader.readAsDataURL(file);
-        }
-    }
-
-    function saveProfile() {
-        const n = document.getElementById('new-n').value;
-        const updates = {};
-        if(n) updates.n = n;
-        if(tempImg) updates.av = tempImg;
-        
-        if(Object.keys(updates).length > 0) {
-            db.ref('users/'+myID).update(updates);
-            document.getElementById('edit-popup').style.display = 'none';
-            tempImg = "";
-            document.getElementById('status-upload').innerText = "";
-        }
-    }
-
-    function send() {
-        const t = document.getElementById('mInp').value;
-        if(!t) return;
-        db.ref('main_msgs').push({ uid: myID, n: myD.n, av: myD.av, t: t });
-        document.getElementById('mInp').value = '';
-    }
-
-    function init() {
-        db.ref('main_msgs').limitToLast(30).on('child_added', s => {
-            const d = s.val();
-            const isMe = d.uid === myID;
-            const div = document.createElement('div');
-            div.className = `msg ${isMe ? 'me' : ''}`;
-            div.innerHTML = `<img src="${d.av}" class="u-img"><div class="bubble"><span class="u-name">${d.n}</span>${d.t}</div>`;
-            document.getElementById('chat-win').appendChild(div);
-            document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
-        });
-
-        const list = ['😂','🔥','👑','✨','💯','💎','🌹','💙','🚀','🧿','🇮🇶','🤝','❤️','👌','😎','🤔','⚡','🎉','💪','🤫','🤴','🤩','🦁','🍭','🍷','🧨','🧿','🥶','🥵','😡','🤢','😴','💀','👽','🤖','🎃','⭐','🌙','🌈','🔥','🌊','🍀','🍄','🍓','🍕','🏀','🎸','📱'];
-        list.forEach(e => { document.getElementById('em-box').innerHTML += `<span style="font-size:25px; cursor:pointer;" onclick="document.getElementById('mInp').value += '${e}'">${e}</span>`; });
-
-        db.ref('status').on('value', s => {
-            const l = document.getElementById('user-list');
-            l.innerHTML = `<div class="user-item"><img src="https://cdn-icons-png.flaticon.com/512/4712/4712035.png" style="width:35px; border-radius:50%;"><span style="color:#00f2ff;">بوت المملكة 🤖</span><div style="width:8px; height:8px; background:#0f0; border-radius:50%; margin-right:auto;"></div></div>`;
-            s.forEach(u => {
-                l.innerHTML += `<div class="user-item"><img src="${u.val().av}" style="width:35px; height:35px; border-radius:50%; border:1px solid #444;"><span>${u.val().n}</span><div style="width:8px; height:8px; background:#0f0; border-radius:50%; margin-right:auto;"></div></div>`;
-            });
-        });
-    }
-
-    function askYT() {
-        const id = prompt("كود فيديو يوتيوب:");
-        if(id) {
-            document.getElementById('yt-box').style.display = 'block';
-            document.getElementById('yt-frame').innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${id}?autoplay=1&controls=0&modestbranding=1" frameborder="0"></iframe>`;
-        }
-    }
-    function toggleEm(e) { e.stopPropagation(); const b = document.getElementById('em-box'); b.style.display = b.style.display === 'grid' ? 'none' : 'grid'; }
-</script>
-</body>
-</html>
+/* هذا الجزء يخليك تتحكم بالألوان بلمسة واحدة */
+:root {
+    --main-color: #ffd700;  /* غير هذا اللون لأي لون يعجبك (أحمر، أزرق، بنفسجي) */
+    --chat-bg: #000000;    /* لون خلفية الشات */
+    --msg-me: #221d00;     /* لون رسائلك */
+    --msg-others: #1a1a1a; /* لون رسائل البقية */
+    --border-radius: 20px; /* درجة انحناء الزوايا */
+}
