--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
-/* هذا الجزء يخليك تتحكم بالألوان بلمسة واحدة */
-:root {
-    --main-color: #ffd700;  /* غير هذا اللون لأي لون يعجبك (أحمر، أزرق، بنفسجي) */
-    --chat-bg: #000000;    /* لون خلفية الشات */
-    --msg-me: #221d00;     /* لون رسائلك */
-    --msg-others: #1a1a1a; /* لون رسائل البقية */
-    --border-radius: 20px; /* درجة انحناء الزوايا */
-}
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مملكة علوش - كوكب النجوم 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <style>
+        :root { --gold: #ffd700; --bg: #000; --panel: #0d0d0d; }
+        body { background: var(--bg); color: #fff; font-family: 'Tahoma', sans-serif; margin: 0; overflow: hidden; }
+
+        /* الأجنحة المعكوسة */
+        .side { width: 270px; height: 100vh; background: var(--panel); position: fixed; transition: 0.5s; z-index: 2000; top: 0; border: 1px solid #222; }
+        #side-right { right: -272px; }
+        #side-left { left: -272px; }
+        .side.open { right: 0 !important; left: 0 !important; }
+
+        /* الشات والرسائل */
+        #main-view { height: 100vh; display: flex; flex-direction: column; position: relative; }
+        #chat-win { flex: 1; overflow-y: auto; padding: 20px; background: radial-gradient(circle, #151515 0%, #000 100%); position: relative; } /* إضافة position: relative; للنجوم */
+
+        /* تأثير النجوم المتحركة */
+        .stars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; z-index: 0; pointer-events: none; }
+        .star { position: absolute; background: #fff; border-radius: 50%; animation: twinkle var(--duration) infinite ease-in-out alternate; opacity: 0; }
+
+        @keyframes twinkle {
+            0% { opacity: 0; transform: scale(0.5); }
+            50% { opacity: 1; transform: scale(1); }
+            100% { opacity: 0; transform: scale(0.7); }
+        }
+
+        /* رسائل الشات */
+        .msg { display: flex; gap: 12px; margin-bottom: 20px; position: relative; z-index: 1; } /* لجعل الرسائل فوق النجوم */
+        .msg.me { flex-direction: row-reverse; }
+        .u-img { width: 50px; height: 50px; border-radius: 12px; border: 2px solid var(--gold); object-fit: cover; cursor: pointer; }
+        .bubble { max-width: 75%; background: #1a1a1a; padding: 12px 16px; border-radius: 18px; border: 1px solid #333; line-height: 1.6; }
+        .me .bubble { border-color: var(--gold); background: #221d00; }
+        .u-name { font-size: 12px; color: var(--gold); font-weight: bold; margin-bottom: 5px; display: block; }
+
+        /* شريط الكتابة الضخم */
+        .bar { background: #0a0a0a; padding: 15px 20px
