--- a/index.html
+++ b/index.html
@@ -3,73 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مملكة علوش - لوحة السيطرة 👑</title>
+    <title>مملكة علوش - الإصدار النهائي الشامل 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --gold: #ffd700; --bg: #000; --panel: #0d0d0d; }
+        :root { --gold: #ffd700; --bg: #000; --panel: #111; }
         body { background: var(--bg); color: #fff; font-family: 'Tahoma', sans-serif; margin: 0; overflow: hidden; }
 
-        /* لوحة التحكم السرية */
-        #admin-panel { position: fixed; bottom: -100%; left: 0; width: 100%; height: 70%; background: #111; border-top: 3px solid var(--gold); z-index: 5000; transition: 0.5s; padding: 20px; border-radius: 30px 30px 0 0; box-shadow: 0 -10px 30px rgba(0,0,0,0.8); }
-        #admin-panel.open { bottom: 0; }
-        .admin-btn { width: 100%; padding: 15px; background: #222; border: 1px solid var(--gold); color: #fff; margin-bottom: 10px; border-radius: 10px; cursor: pointer; font-weight: bold; }
+        /* الخلفية والنجوم */
+        #stars-bg { position: fixed; width: 100%; height: 100%; z-index: 0; pointer-events: none; }
+        .star { position: absolute; background: white; border-radius: 50%; opacity: 0.5; animation: blink infinite alternate; }
+        @keyframes blink { from { opacity: 0.2; } to { opacity: 1; } }
 
-        /* الشات والخلفية */
-        #chat-win { height: 80vh; overflow-y: auto; padding: 20px; background: radial-gradient(circle, #151515 0%, #000 100%); position: relative; }
-        .stars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
-        .star { position: absolute; background: #fff; border-radius: 50%; animation: twinkle 3s infinite alternate; }
-
-        /* تصميم الرسائل */
-        .msg { display: flex; gap: 12px; margin-bottom: 20px; position: relative; z-index: 1; }
+        /* الشات */
+        #main-view { height: 100vh; display: flex; flex-direction: column; position: relative; z-index: 10; }
+        #chat-win { flex: 1; overflow-y: auto; padding: 20px; background: rgba(0,0,0,0.5); }
+        .msg { display: flex; gap: 12px; margin-bottom: 20px; }
         .msg.me { flex-direction: row-reverse; }
         .u-img { width: 50px; height: 50px; border-radius: 12px; border: 2px solid var(--gold); object-fit: cover; }
-        .bubble { max-width: 75%; background: #1a1a1a; padding: 12px; border-radius: 15px; border: 1px solid #333; }
-        .u-name { font-size: 11px; color: var(--gold); font-weight: bold; }
+        .bubble { max-width: 75%; background: rgba(30,30,30,0.9); padding: 12px; border-radius: 15px; border: 1px solid #333; }
+        .u-name { font-size: 11px; color: var(--gold); font-weight: bold; margin-bottom: 5px; display: block; }
 
-        /* شريط الإدخال */
-        .bar { background: #0a0a0a; padding: 15px; display: flex; gap: 10px; align-items: center; border-top: 1px solid #222; }
-        #mInp { flex: 1; background: #161616; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 30px; outline: none; }
+        /* القوائم الجانبية (المعكوسة) */
+        .side { width: 270px; height: 100vh; background: var(--panel); position: fixed; top: 0; transition: 0.5s cubic-bezier(0.4, 0, 0.2, 1); z-index: 2000; border: 1px solid #222; }
+        #side-right { right: -275px; } /* تفتح لليسار */
+        #side-left { left: -275px; }   /* تفتح لليمين */
+        .side.open { right: 0 !important; left: 0 !important; }
 
-        /* المتصلون */
-        .side { width: 260px; height: 100vh; background: var(--panel); position: fixed; top: 0; transition: 0.4s; z-index: 2000; }
-        #side-right { right: -262px; }
-        .side.open { right: 0 !important; }
-        .user-item { display: flex; align-items: center; gap: 10px; padding: 12px; border-bottom: 1px solid #222; }
+        /* شريط الكتابة الضخم */
+        .bar { background: #000; padding: 15px 20px; display: flex; gap: 12px; border-top: 2px solid #222; align-items: center; }
+        #mInp { flex: 1; background: #1a1a1a; border: 1px solid #444; color: #fff; padding: 15px; border-radius: 30px; outline: none; font-size: 16px; }
 
-        @keyframes twinkle { 0% { opacity: 0.3; } 100% { opacity: 1; } }
+        /* لوحات التحكم والتعديل */
+        .popup { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 300px; background: #0a0a0a; border: 2px solid var(--gold); border-radius: 20px; padding: 20px; display: none; z-index: 4000; text-align: center; }
+        .admin-open { bottom: 0 !important; top: auto; transform: translate(-50%, 0); width: 100%; border-radius: 30px 30px 0 0; }
+        button { cursor: pointer; transition: 0.3s; }
+        
+        /* اليوتيوب */
+        #yt-box { position: absolute; top: 70px; left: 15px; width: 180px; height: 110px; border: 2px solid var(--gold); border-radius: 10px; overflow: hidden; display: none; z-index: 1000; background: #000; }
     </style>
 </head>
 <body onclick="closeAll()">
 
-    <div id="admin-panel" onclick="event.stopPropagation()">
-        <h2 style="color:var(--gold); text-align:center;">👑 لوحة تحكم الإمبراطور</h2>
-        <button class="admin-btn" onclick="clearChat()">🧨 تصفير الشات بالكامل</button>
-        <button class="admin-btn" onclick="sendAdminMsg()">📢 إرسال تنبيه ملكي لكل الأعضاء</button>
-        <button class="admin-btn" onclick="resetUsers()">🧹 تنظيف قائمة المتصلين الوهميين</button>
-        <button class="admin-btn" style="border-color:red; color:red;" onclick="document.getElementById('admin-panel').classList.remove('open')">إغلاق اللوحة</button>
+    <div id="stars-bg"></div>
+
+    <div id="edit-pop" class="popup" onclick="event.stopPropagation()">
+        <h3 style="color:var(--gold);">تعديل هويتك الملكية</h3>
+        <input type="text" id="new-n" placeholder="الاسم الجديد" style="width:90%; padding:10px; margin-bottom:10px; background:#000; color:#fff; border:1px solid #333; border-radius:8px;">
+        <label style="display:block; background:#222; padding:10px; border:1px dashed var(--gold); margin-bottom:10px; border-radius:8px; cursor:pointer;">
+            📷 اختر صورة من جهازك
+            <input type="file" id="file-inp" accept="image/*" style="display:none;" onchange="handleFile(this)">
+        </label>
+        <button onclick="saveProfile()" style="width:100%; background:var(--gold); padding:10px; border:none; border-radius:8px; font-weight:bold;">حفظ التغييرات</button>
+    </div>
+
+    <div id="admin-pop" class="popup admin-open" onclick="event.stopPropagation()">
+        <h3 style="color:var(--gold);">👑 لوحة الإمبراطور علوش</h3>
+        <button onclick="db.ref('main_msgs').remove()" style="width:100%; padding:12px; background:red; color:#fff; border:none; border-radius:10px; margin-bottom:10px;">🧨 تصفير الشات بالكامل</button>
+        <button onclick="db.ref('status').remove()" style="width:100%; padding:12px; background:#222; color:var(--gold); border:1px solid var(--gold); border-radius:10px;">🧹 تنظيف قائمة المتصلين</button>
+        <button onclick="document.getElementById('admin-pop').style.display='none'" style="margin-top:15px; background:none; border:none; color:#777;">إغلاق اللوحة</button>
     </div>
 
     <div id="side-right" class="side" onclick="event.stopPropagation()">
-        <div style="padding:15px; background:var(--gold); color:#000; font-weight:bold; text-align:center;">👥 الأعضاء الحقيقيون</div>
+        <div style="padding:15px; background:var(--gold); color:#000; font-weight:bold; text-align:center;">👥 المتصلون (حقيقي)</div>
         <div id="user-list"></div>
     </div>
 
+    <div id="side-left" class="side" onclick="event.stopPropagation()">
+        <div style="padding:15px; border-bottom:1px solid #333; text-align:center; color:var(--gold);">⚙️ خيارات المملكة</div>
+        <div style="padding:10px;">
+            <button onclick="document.getElementById('edit-pop').style.display='block'" style="width:100%; padding:15px; background:none; color:#fff; border:none; text-align:right;">👤 تعديل البروفايل</button>
+            <button onclick="askYT()" style="width:100%; padding:15px; background:none; color:#fff; border:none; text-align:right;">📺 تشغيل يوتيوب</button>
+        </div>
+    </div>
+
     <div id="main-view">
-        <div style="padding:15px; background:#111; display:flex; justify-content:space-between; align-items:center;">
-            <div style="width:40px;"></div>
-            <b onmousedown="adminTimer()" onmouseup="clearTimer()" style="color:var(--gold); font-size:18px; cursor:pointer;">مملكة علوش 👑</b>
-            <button onclick="openUsers(event)" style="background:none; border:none; font-size:25px; cursor:pointer;">👥</button>
+        <div style="padding:15px; background:rgba(0,0,0,0.8); display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #222;">
+            <button onclick="openS('left', event)" style="background:none; border:none; font-size:25px;">👑</button>
+            <b onmousedown="startAdminTimer()" onmouseup="stopAdminTimer()" style="color:var(--gold); font-size:18px; cursor:pointer;">مملكة علوش</b>
+            <button onclick="openS('right', event)" style="background:none; border:none; font-size:25px;">👥</button>
         </div>
 
-        <div id="chat-win">
-            <div class="stars" id="star-box"></div>
+        <div id="yt-box" onclick="event.stopPropagation()">
+            <div id="yt-frame" style="width:100%; height:100%;"></div>
         </div>
+
+        <div id="chat-win"></div>
 
         <div class="bar" onclick="event.stopPropagation()">
-            <button onclick="document.getElementById('side-right').classList.toggle('open')" style="background:none; border:none; font-size:22px;">⚙️</button>
-            <input type="text" id="mInp" placeholder="اكتب رسالتك...">
+            <input type="text" id="mInp" placeholder="اكتب رسالتك يا ملك...">
             <button onclick="send()" style="background:none; border:none; font-size:25px;">🚀</button>
         </div>
     </div>
@@ -84,28 +107,43 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const auth = firebase.auth();
-    let myID, myD = {}, pressTimer;
+    let myID, myD = {}, tempImg = "", adminTimer;
 
     auth.onAuthStateChanged(u => {
         if(u) {
             myID = u.uid;
             db.ref('users/'+myID).on('value', s => {
-                myD = s.val() || { n: "عضو", av: "https://via.placeholder.com/100" };
-                // تحديث حالة الاتصال الحقيقية فقط
-                const statusRef = db.ref('status/'+myID);
-                statusRef.set({ n: myD.n, av: myD.av, online: true });
-                statusRef.onDisconnect().remove(); // يحذف العضو فوراً عند إغلاق الصفحة
+                myD = s.val() || { n: "عضو جديد", av: "https://via.placeholder.com/100" };
+                db.ref('status/'+myID).set({ n: myD.n, av: myD.av });
+                db.ref('status/'+myID).onDisconnect().remove();
             });
             init();
+            genStars();
         }
     });
 
-    // لوحة التحكم تفتح بالضغط المطول (3 ثواني) على الاسم
-    function adminTimer() { pressTimer = window.setTimeout(() => { document.getElementById('admin-panel').classList.add('open'); }, 2000); }
-    function clearTimer() { clearTimeout(pressTimer); }
+    function openS(d, e) { e.stopPropagation(); document.getElementById('side-'+d).classList.add('open'); }
+    function closeAll() {
+        document.getElementById('side-right').classList.remove('open');
+        document.getElementById('side-left').classList.remove('open');
+        document.getElementById('edit-pop').style.display = 'none';
+    }
 
-    function openUsers(e) { e.stopPropagation(); document.getElementById('side-right').classList.add('open'); }
-    function closeAll() { document.getElementById('side-right').classList.remove('open'); }
+    function handleFile(inp) {
+        const file = inp.files[0];
+        if(file) {
+            const r = new FileReader();
+            r.onload = (e) => tempImg = e.target.result;
+            r.readAsDataURL(file);
+        }
+    }
+
+    function saveProfile() {
+        const n = document.getElementById('new-n').value;
+        const up = {}; if(n) up.n = n; if(tempImg) up.av = tempImg;
+        if(Object.keys(up).length > 0) db.ref('users/'+myID).update(up);
+        document.getElementById('edit-pop').style.display = 'none';
+    }
 
     function send() {
         const t = document.getElementById('mInp').value;
@@ -115,47 +153,50 @@
     }
 
     function init() {
-        // عرض الرسائل
         db.ref('main_msgs').limitToLast(40).on('child_added', s => {
             const d = s.val();
             const div = document.createElement('div');
             div.className = `msg ${d.uid === myID ? 'me' : ''}`;
-            div.innerHTML = `<img src="${d.av}" class="u-img"><div class="bubble"><span class="u-name">${d.n}</span><br>${d.t}</div>`;
+            div.innerHTML = `<img src="${d.av}" class="u-img"><div class="bubble"><span class="u-name">${d.n}</span>${d.t}</div>`;
             document.getElementById('chat-win').appendChild(div);
             document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
         });
 
-        // عرض المتصلين الحقيقيين فقط
         db.ref('status').on('value', s => {
             const l = document.getElementById('user-list');
-            l.innerHTML = '';
+            l.innerHTML = `<div style="display:flex; align-items:center; gap:10px; padding:12px; border-bottom:1px solid #222;">
+                <img src="https://cdn-icons-png.flaticon.com/512/4712/4712035.png" style="width:35px;">
+                <span style="color:#00f2ff;">بوت المملكة 🤖</span><div style="width:8px; height:8px; background:#0f0; border-radius:50%; margin-right:auto;"></div>
+            </div>`;
             s.forEach(u => {
-                l.innerHTML += `<div class="user-item">
+                l.innerHTML += `<div style="display:flex; align-items:center; gap:10px; padding:12px; border-bottom:1px solid #222;">
                     <img src="${u.val().av}" style="width:35px; height:35px; border-radius:50%; border:1px solid var(--gold);">
-                    <span>${u.val().n}</span>
-                    <div style="width:8px; height:8px; background:#0f0; border-radius:50%; margin-right:auto;"></div>
+                    <span>${u.val().n}</span><div style="width:8px; height:8px; background:#0f0; border-radius:50%; margin-right:auto;"></div>
                 </div>`;
             });
         });
+    }
 
-        // توليد النجوم
-        for(let i=0; i<40; i++) {
-            const star = document.createElement('div');
-            star.className = 'star';
-            star.style.width = star.style.height = Math.random()*3+'px';
-            star.style.top = Math.random()*100+'%';
-            star.style.left = Math.random()*100+'%';
-            document.getElementById('star-box').appendChild(star);
+    function startAdminTimer() { adminTimer = setTimeout(() => document.getElementById('admin-pop').style.display='block', 2000); }
+    function stopAdminTimer() { clearTimeout(adminTimer); }
+
+    function askYT() {
+        const id = prompt("كود الفيديو:");
+        if(id) {
+            document.getElementById('yt-box').style.display = 'block';
+            document.getElementById('yt-frame').innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${id}?autoplay=1&controls=0" frameborder="0"></iframe>`;
         }
     }
 
-    // وظائف لوحة التحكم
-    function clearChat() { if(confirm("هل تريد تصفير الشات؟")) db.ref('main_msgs').remove(); }
-    function sendAdminMsg() { 
-        const msg = prompt("اكتب التنبيه الإداري:");
-        if(msg) db.ref('main_msgs').push({ uid: 'admin', n: '⚠️ تنبيه إداري', av: 'https://cdn-icons-png.flaticon.com/512/179/179386.png', t: msg });
+    function genStars() {
+        for(let i=0; i<60; i++) {
+            const s = document.createElement('div'); s.className = 'star';
+            s.style.width = s.style.height = Math.random()*3+'px';
+            s.style.top = Math.random()*100+'%'; s.style.left = Math.random()*100+'%';
+            s.style.animationDuration = (Math.random()*3+2)+'s';
+            document.getElementById('stars-bg').appendChild(s);
+        }
     }
-    function resetUsers() { if(confirm("سيتم تنظيف القائمة من أي أسماء عالقة؟")) db.ref('status').remove(); }
 </script>
 </body>
 </html>
